--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
+*.iws
 .gradle
 /build/
-
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
 
 # Cache of project
 .gradletasknamecache
