--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ repositories {
 
 dependencies {
   testCompileOnly("org.junit.jupiter:junit-jupiter-api:5.7.2")
-  testRuntime("org.junit.jupiter:junit-jupiter-engine:5.7.2")
+  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.2")
   testImplementation("org.seleniumhq.selenium:selenium-java:3.141.59")
   testImplementation("com.codeborne:selenide:5.22.0")
 }
