update Selenide / Selenium

--- a/build.gradle
+++ b/build.gradle
@@ -14,14 +14,14 @@ compileTestJava {
 }
 
 repositories {
-  jcenter()
+  mavenCentral()
 }
 
 dependencies {
-  testCompileOnly("org.junit.jupiter:junit-jupiter-api:5.7.2")
-  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.7.2")
-  testImplementation("org.seleniumhq.selenium:selenium-java:3.141.59")
-  testImplementation("com.codeborne:selenide:5.22.0")
+  testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.2")
+  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.2")
+  testImplementation("com.codeborne:selenide:6.12.2")
+  testRuntimeOnly("org.slf4j:slf4j-simple:2.0.6")
 }
 
 test {
