--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
   testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.10.0")
   testImplementation("com.codeborne:selenide:6.17.2")
   testRuntimeOnly("org.slf4j:slf4j-simple:2.0.9")
+  testImplementation("org.assertj:assertj-core:3.24.2")
 }
 
 test {
